--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://mens-sop.vercel.app/">
     <meta property="og:title" content="交友軟體高配對 SOP | 專為理工男設計">
     <meta property="og:description" content="這不是運氣，這是策略。從照片到自介，一套可以直接複製的脫單攻略。">
-    <meta property="og:image" content="https://freeven-menspalais.notion.site/image/attachment%3A3f9da1cb-dfe2-49f8-aae7-2d98ab78939d%3Amobile2_with_sign.jpg?table=block&id=26cb1383-eee0-809b-9d8f-d70b9d5306d4&spaceId=062b1383-eee0-8134-896c-0003dbe5fa46&width=660&userId=&cache=v2">
+    <meta property="og:image" content="https://d1yei2z3i6k35z.cloudfront.net/2452254/69536c02e8ec2_NOTION.webp">
 
     <title>交友軟體高配對 SOP</title>
     
@@ -72,7 +72,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
